crates/templated_uri_macros_impl/src/snapshots/templated_uri_macros_impl__tests__enum_struct_item_error.snap
---
source: crates/templated_uri_macros_impl/src/lib.rs
expression: output_pretty
---
enum TestEnum {
    Variant1 { param: String },
}
::core::compile_error! {
    "Only unnamed fields (tuples) are supported in enum variants for TemplatedUri"
}
