crates/templated_uri_macros_impl/src/snapshots/templated_uri_macros_impl__tests__generic_struct_rejected.snap
---
source: crates/templated_uri_macros_impl/src/lib.rs
expression: output_pretty
---
::core::compile_error! {
    "Generic types are not supported for #[templated]"
}
