crates/templated_uri_macros_impl/src/snapshots/templated_uri_macros_impl__tests__insufficient_template_impl.snap
---
source: crates/templated_uri_macros_impl/src/lib.rs
expression: output_pretty
---
struct InsufficientTemplate {
    param: String,
}
::core::compile_error! {
    "Missing values in struct: [\"param2\"]"
}
