crates/templated_uri_macros_impl/src/snapshots/templated_uri_macros_impl__tests__optional_field_codegen.snap
---
source: crates/templated_uri_macros_impl/src/lib.rs
expression: output_pretty
---
struct OptionalTest {
    id: u32,
    filter: String,
    limit: Option<u32>,
}
impl ::templated_uri::PathAndQueryTemplate for OptionalTest {
    fn template(&self) -> &'static core::primitive::str {
        "/items/{id}{?filter,limit}"
    }
    fn format_template(&self) -> &'static core::primitive::str {
        "/items/{id}?filter={filter}&limit={limit}"
    }
    fn label(&self) -> ::core::option::Option<&'static core::primitive::str> {
        ::core::option::Option::None
    }
    fn render(&self) -> ::std::string::String {
        let mut __out = ::std::string::String::with_capacity(70usize);
        ::templated_uri::PathAndQueryTemplate::render_into(self, &mut __out);
        __out
    }
    fn render_into(&self, __out: &mut ::std::string::String) {
        __out.push_str("/items/");
        ::templated_uri::Escape::escape_into(&self.id, __out);
        {
            let mut __first = true;
            {
                let __val = &self.filter;
                if __first {
                    __out.push_str("?");
                } else {
                    __out.push_str("&");
                }
                __out.push_str("filter");
                __out.push_str("=");
                ::templated_uri::Escape::escape_into(__val, __out);
                __first = false;
            }
            if let ::core::option::Option::Some(ref __val) = self.limit {
                if __first {
                    __out.push_str("?");
                } else {
                    __out.push_str("&");
                }
                __out.push_str("limit");
                __out.push_str("=");
                ::templated_uri::Escape::escape_into(__val, __out);
                __first = false;
            }
        }
    }
    fn render_capacity_hint(&self) -> ::core::primitive::usize {
        70usize
    }
    fn to_path_and_query(
        &self,
    ) -> ::std::result::Result<
        ::templated_uri::__private::http::uri::PathAndQuery,
        ::templated_uri::UriError,
    > {
        Ok(
            ::templated_uri::__private::http::uri::PathAndQuery::try_from(
                ::templated_uri::PathAndQueryTemplate::render(self),
            )?,
        )
    }
}
impl ::std::fmt::Debug for OptionalTest {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        f.debug_tuple("OptionalTest").field(&"/items/{id}{?filter,limit}").finish()
    }
}
impl ::templated_uri::__private::RedactedDisplay for OptionalTest {
    fn fmt(
        &self,
        redactor: &dyn ::templated_uri::__private::Redactor,
        f: &mut ::std::fmt::Formatter,
    ) -> ::std::fmt::Result {
        f.write_str("/items/")?;
        <u32 as ::templated_uri::__private::RedactedDisplay>::fmt(
            &self.id,
            redactor,
            f,
        )?;
        {
            let mut __first = true;
            {
                if __first {
                    f.write_str("?")?;
                } else {
                    f.write_str("&")?;
                }
                f.write_str("filter")?;
                f.write_str("=")?;
                <String as ::templated_uri::__private::RedactedDisplay>::fmt(
                    &self.filter,
                    redactor,
                    f,
                )?;
                __first = false;
            }
            if let ::core::option::Option::Some(ref __val) = self.limit {
                if __first {
                    f.write_str("?")?;
                } else {
                    f.write_str("&")?;
                }
                f.write_str("limit")?;
                f.write_str("=")?;
                <u32 as ::templated_uri::__private::RedactedDisplay>::fmt(
                    __val,
                    redactor,
                    f,
                )?;
                __first = false;
            }
        }
        ::std::result::Result::Ok(())
    }
}
impl From<OptionalTest> for ::templated_uri::PathAndQuery {
    fn from(value: OptionalTest) -> Self {
        ::templated_uri::PathAndQuery::from_template(value)
    }
}
