crates/templated_uri_macros_impl/src/snapshots/templated_uri_macros_impl__tests__optional_reference_field_codegen.snap
---
source: crates/templated_uri_macros_impl/src/lib.rs
expression: output_pretty
---
struct ReferenceOptional {
    name: Option<&'static str>,
}
impl ::templated_uri::PathAndQueryTemplate for ReferenceOptional {
    fn template(&self) -> &'static core::primitive::str {
        "/items{?name}"
    }
    fn format_template(&self) -> &'static core::primitive::str {
        "/items?name={name}"
    }
    fn label(&self) -> ::core::option::Option<&'static core::primitive::str> {
        ::core::option::Option::None
    }
    fn render(&self) -> ::std::string::String {
        let mut __out = ::std::string::String::with_capacity(12usize);
        __out.push_str("/items");
        {
            let mut __first = true;
            if let ::core::option::Option::Some(ref __val) = self.name {
                if __first {
                    __out.push_str("?");
                } else {
                    __out.push_str("&");
                }
                __out.push_str("name");
                __out.push_str("=");
                ::std::fmt::Write::write_fmt(
                        &mut __out,
                        ::core::format_args!(
                            "{}", ::templated_uri::Escape::escape(* __val)
                        ),
                    )
                    .expect(
                        "Display impls for templated URI parameter values are expected to be infallible",
                    );
                __first = false;
            }
        }
        __out
    }
    fn to_path_and_query(
        &self,
    ) -> ::std::result::Result<
        ::templated_uri::http::uri::PathAndQuery,
        ::templated_uri::UriError,
    > {
        Ok(
            ::templated_uri::http::uri::PathAndQuery::try_from(
                ::templated_uri::PathAndQueryTemplate::render(self),
            )?,
        )
    }
}
impl ::std::fmt::Debug for ReferenceOptional {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        f.debug_tuple("ReferenceOptional").field(&"/items{?name}").finish()
    }
}
impl ::data_privacy::RedactedDisplay for ReferenceOptional {
    fn fmt(
        &self,
        engine: &dyn ::data_privacy::Redactor,
        f: &mut ::std::fmt::Formatter,
    ) -> ::std::fmt::Result {
        f.write_str("/items")?;
        {
            let mut __first = true;
            if let ::core::option::Option::Some(ref __val) = self.name {
                if __first {
                    f.write_str("?")?;
                } else {
                    f.write_str("&")?;
                }
                f.write_str("name")?;
                f.write_str("=")?;
                <str as ::data_privacy::RedactedDisplay>::fmt(*__val, engine, f)?;
                __first = false;
            }
        }
        ::std::result::Result::Ok(())
    }
}
impl From<ReferenceOptional> for ::templated_uri::PathAndQuery {
    fn from(value: ReferenceOptional) -> Self {
        ::templated_uri::PathAndQuery::from_template(value)
    }
}
